--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 	font-family: 'Poppins', sans-serif;
 	line-height:2;
 	font-size:18px;
-	font-style:400px;
+	font-style:400;
 }
 
 @media only screen and (max-width:768px) {.container-fluid_3 {padding-top:250px; padding-bottom:155px; max-width:768px;}
@@ -42,7 +42,7 @@
 
 #devin_title{
 font-family: 'Poppins', sans-serif;
-font-style:700px;
+font-style:700;
 text-align:center;
 }
 
@@ -54,7 +54,7 @@ text-align:center;
 	font-family: 'Poppins', sans-serif;
 	line-height:2;
 	font-size:18px;
-	font-style:400px;
+	font-style:400;
 	width:90%;
 }
 
@@ -84,7 +84,7 @@ padding-left:50px;
 
 #devin_caption{
 font-family: 'Poppins', sans-serif;
-font-style:400px;
+font-style:400;
 font-size:10px;
 text-align:center;
 padding-left: 100px;
@@ -106,7 +106,7 @@ padding-left: 100px;
 
 #tyler_title{
 font-family: 'Poppins', sans-serif;
-font-style:700px;
+font-style:700;
 text-align:center;	
 }
 
@@ -114,7 +114,7 @@ text-align:center;
 font-family: 'Poppins', sans-serif;
 line-height:2;
 font-size:18px;
-font-style:400px;
+font-style:400;
 width:90%;
 }
 
@@ -127,7 +127,7 @@ width:90%;
 
 #tyler_caption{
 	font-family: 'Poppins', sans-serif;
-	font-style:400px;
+	font-style:400;
 	font-size:10px;
 	text-align:center;
 	padding-left:100px;
@@ -145,7 +145,6 @@ width:90%;
 .container_fluid_6{
 background-color: #8FBCE6;
 width:100%;
-height:1000px;
 }
 
 @media only screen and (max-width:768px) {.container-fluid_7 {padding-top:250px; padding-bottom:155px; max-width:768px;}
@@ -176,7 +175,7 @@ height:1000px;
 
 #shane_title{
 font-family: 'Poppins', sans-serif;
-font-style:700px;
+font-style:700;
 text-align:center;	
 color:white;
 }
@@ -185,14 +184,14 @@ color:white;
 font-family: 'Poppins', sans-serif;
 line-height:2;
 font-size:18px;
-font-style:400px;
+font-style:400;
 width:90%;
 color:white;
 }
 
 #shane_caption{
 	font-family: 'Poppins', sans-serif;
-	font-style:400px;
+	font-style:400;
 	font-size:10px;
 	text-align:center;
 	padding-left:100px;
@@ -235,7 +234,7 @@ text-align:center;
 font-family: 'Poppins', sans-serif;
 line-height:2;
 font-size:18px;
-font-style:400px;
+font-style:400;
 width:90%;
 }
 
@@ -281,7 +280,7 @@ background-color: #AA041D;
 #trevor_title{
 color:black;
 font-family: 'Poppins', sans-serif;
-font-style:700px;
+font-style:700;
 text-align:center;
 }
 
@@ -289,7 +288,7 @@ text-align:center;
 font-family: 'Poppins', sans-serif;
 line-height:2;
 font-size:18px;
-font-style:400px;
+font-style:400;
 width:90%;
 color:black;
 }
@@ -301,7 +300,7 @@ color:black;
 
 #trevor_caption{
 	font-family: 'Poppins', sans-serif;
-	font-style:400px;
+	font-style:400;
 	font-size:10px;
 	text-align:center;
 	padding-left:100px;
